bug fixes on mobile

--- a/sass/about.sass
+++ b/sass/about.sass
@@ -1,7 +1,11 @@
+@import _sizes
+
 #about
   .content
-    float: left
-    margin: 0 300px
+    margin: 0 100px 50px
+
+    @media(max-width: $medium)
+      margin: 0 auto
 
   .twitter
     text-align: center
