--- a/sass/header.sass
+++ b/sass/header.sass
@@ -1,5 +1,4 @@
-$medium: 700px
-$small: 420px
+@import _sizes
 
 header
   $height: 500px
